crt: msvcr80.def.in: Fix I386 symbols __lc_clike and _mbcasemap
__lc_clike and _mbcasemap symbols are DATA in all msvcr*.dll libraries,
including I386 variant of msvcr80.dll. So fix lib32/msvcr80.def.in file.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib32/msvcr80.def.in
+++ b/mingw-w64-crt/lib32/msvcr80.def.in
@@ -940,7 +940,7 @@ _ftime64
 _futime64
 _gmtime64
 _localtime64
-_mbcasemap
+_mbcasemap DATA
 _mktime64
 _osplatform	DATA
 _time64
@@ -956,7 +956,7 @@ __CxxQueryExceptionSize
 __CxxRegisterExceptionObject
 __CxxUnregisterExceptionObject
 __DestructExceptionObject
-__lc_clike
+__lc_clike DATA
 __uncaught_exception
 __wcserror
 _aligned_free
