crt: msvcr80.def.in: Fix some some I386 symbol names which miss @SIZE suffix
I386 symbols __CxxLongjmpUnwind, _adj_fdiv_m*, _adj_fdivr_m* and
_seh_longjmp_unwind use stdcall convention, so add @SIZE suffix
for them into I386 version of def file for msvcr80.dll.

(_adj_fdiv* actually aren't stdcall but a custom calling convention;
these will be fixed further in a later upcoming commit.)

Fix symbol names in lib32/msvcr80.def.in file.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib32/msvcr80.def.in
+++ b/mingw-w64-crt/lib32/msvcr80.def.in
@@ -173,7 +173,7 @@ _HUGE DATA
 _Strftime
 _XcptFilter
 __CxxFrameHandler
-__CxxLongjmpUnwind
+__CxxLongjmpUnwind@4
 __RTCastToVoid
 __RTDynamicCast
 __RTtypeid
@@ -239,15 +239,15 @@ __winitenv DATA
 _abnormal_termination
 _access
 _acmdln DATA
-_adj_fdiv_m16i
-_adj_fdiv_m32
-_adj_fdiv_m32i
-_adj_fdiv_m64
+_adj_fdiv_m16i@4
+_adj_fdiv_m32@4
+_adj_fdiv_m32i@4
+_adj_fdiv_m64@8
 _adj_fdiv_r
-_adj_fdivr_m16i
-_adj_fdivr_m32
-_adj_fdivr_m32i
-_adj_fdivr_m64
+_adj_fdivr_m16i@4
+_adj_fdivr_m32@4
+_adj_fdivr_m32i@4
+_adj_fdivr_m64@8
 _adj_fpatan
 _adj_fprem
 _adj_fprem1
@@ -522,7 +522,7 @@ _safe_fprem
 _safe_fprem1
 _scalb
 _searchenv
-_seh_longjmp_unwind
+_seh_longjmp_unwind@4
 _set_error_mode
 _set_invalid_parameter_handler
 _set_sbh_threshold
