--- a/mingw-w64-crt/lib-common/msvcrt.def.in
+++ b/mingw-w64-crt/lib-common/msvcrt.def.in
@@ -1530,7 +1530,7 @@ _strupr_l
 _strupr_s
 _strupr_s_l
 _strxfrm_l
-_swprintf == swprintf ; replaced by alias to swprintf
+_swprintf F_X86_ANY(== swprintf) ; i386 and x64 _swprintf replaced by alias
 _swprintf_c
 _swprintf_c_l
 _swprintf_p_l
@@ -1589,7 +1589,7 @@ _vsprintf_l
 _vsprintf_p
 _vsprintf_p_l
 _vsprintf_s_l
-_vswprintf F_I386(== vswprintf) ; i386 _vswprintf replaced by alias
+_vswprintf F_X86_ANY(== vswprintf) ; i386 and x64 _vswprintf replaced by alias
 _vswprintf_c
 _vswprintf_c_l
 _vswprintf_l
