crt: msvcrt.def.in: Remove wrong comment about _endthread/_endthreadex symbols
These functions do not return and gendef false positively detected stdcall
calling convention for them on Windows XP and SP1 binaries. Remove wrong
comment.

Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/lib-common/msvcrt.def.in
+++ b/mingw-w64-crt/lib-common/msvcrt.def.in
@@ -471,8 +471,8 @@ F_X86_ANY(_dstbias DATA)
 _dup
 _dup2
 _ecvt
-_endthread ; In Windows XP and Windows XP SP1 OS system version of msvcrt.dll this symbol has name _endthread@4, in all other versions (including XP SP3) it has standard name
-_endthreadex ; In Windows XP and Windows XP SP1 OS system version of msvcrt.dll this symbol has name _endthreadex@4, in all other versions (including XP SP3) it has standard name
+_endthread
+_endthreadex
 F_X86_ANY(_environ DATA)
 _eof
 _errno
