--- a/mingw-w64-crt/lib32/msvcrt40.def.in
+++ b/mingw-w64-crt/lib32/msvcrt40.def.in
@@ -1043,15 +1043,15 @@ __unDName
 __wgetmainargs
 _abnormal_termination
 _access
-_adj_fdiv_m16i@4
-_adj_fdiv_m32@4
-_adj_fdiv_m32i@4
-_adj_fdiv_m64@8
+_adj_fdiv_m16i ; msvc symbol is without decoration but callee pop stack (like stdcall @4)
+_adj_fdiv_m32 ; msvc symbol is without decoration but callee pop stack (like stdcall @4)
+_adj_fdiv_m32i ; msvc symbol is without decoration but callee pop stack (like stdcall @4)
+_adj_fdiv_m64 ; msvc symbol is without decoration but callee pop stack (like stdcall @8)
 _adj_fdiv_r
-_adj_fdivr_m16i@4
-_adj_fdivr_m32@4
-_adj_fdivr_m32i@4
-_adj_fdivr_m64@8
+_adj_fdivr_m16i ; msvc symbol is without decoration but callee pop stack (like stdcall @4)
+_adj_fdivr_m32 ; msvc symbol is without decoration but callee pop stack (like stdcall @4)
+_adj_fdivr_m32i ; msvc symbol is without decoration but callee pop stack (like stdcall @4)
+_adj_fdivr_m64 ; msvc symbol is without decoration but callee pop stack (like stdcall @8)
 _adj_fpatan
 _adj_fprem
 _adj_fprem1
