--- a/mingw-w64-crt/lib32/msvcr70.def.in
+++ b/mingw-w64-crt/lib32/msvcr70.def.in
@@ -144,6 +144,7 @@ _HUGE DATA
 _Strftime
 _XcptFilter
 __CxxCallUnwindDtor
+__CxxCallUnwindVecDtor
 __CxxDetectRethrow
 __CxxExceptionFilter
 __CxxFrameHandler
