crt: Move __ms_* symbol aliases to def-include/msvcrt-common.def.in
def-include/msvcrt-common.def.in is included into every msvcr*.def.in file.
So move them all common __ms_* symbol aliases which removes definition
duplication.

msvcr* library before version 8.0 have symbols swprintf/vswprintf which
represents pre-C95 variants of these functions without maxlen argument.
Since version 8.0, symbols swprintf/vswprintf are not present anymore,
they were renamed and have have leading underscore.

Distinguish aliased symbol by a new PRE_C95_SWPRINTF macro in .def.in file.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/def-include/msvcrt-common.def.in
+++ b/mingw-w64-crt/def-include/msvcrt-common.def.in
@@ -155,3 +155,33 @@ tzname DATA == _tzname
 
 ADD_UNDERSCORE(vsnprintf_s)
 #endif
+
+; This is list of printf/scanf symbol aliases with __ms_ prefix
+#ifndef UCRTBASE
+__ms_fprintf == fprintf
+__ms_fscanf == fscanf
+__ms_fwprintf == fwprintf
+__ms_fwscanf == fwscanf
+__ms_printf == printf
+__ms_scanf == scanf
+__ms_sprintf == sprintf
+__ms_sscanf == sscanf
+#ifdef PRE_C95_SWPRINTF
+__ms_swprintf == swprintf
+#else
+__ms_swprintf == _swprintf
+#endif
+__ms_swscanf == swscanf
+__ms_vfprintf == vfprintf
+__ms_vfwprintf == vfwprintf
+__ms_vprintf == vprintf
+__ms_vsprintf == vsprintf
+#ifdef PRE_C95_SWPRINTF
+__ms_vswprintf == vswprintf
+#else
+__ms_vswprintf == _vswprintf
+#endif
+__ms_vwprintf == vwprintf
+__ms_wprintf == wprintf
+__ms_wscanf == wscanf
+#endif
