--- a/mingw-w64-crt/lib32/crtdll.def.in
+++ b/mingw-w64-crt/lib32/crtdll.def.in
@@ -67,6 +67,7 @@
 LIBRARY "crtdll.dll"
 EXPORTS
 
+#define PRE_C95_SWPRINTF
 #include "msvcrt-common.def.in"
 
 ; crtdll.dll contains 3 mangled C++ symbols
