crt: Move _strcmpi alias to def-include/msvcrt-common.def.in
Define _strcmpi alias based on a new NO_STRCMPI_ALIAS macro.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib-common/msvcr120_app.def.in
+++ b/mingw-w64-crt/lib-common/msvcr120_app.def.in
@@ -8,6 +8,9 @@ EXPORTS
 
 #include "func.def.in"
 #define NO_GETPID_ALIAS
+#ifdef DEF_ARM32
+#define NO_STRCMPI_ALIAS
+#endif
 #include "msvcrt-common.def.in"
 
 #ifdef DEF_X64
