--- a/mingw-w64-crt/def-include/msvcrt-common.def.in
+++ b/mingw-w64-crt/def-include/msvcrt-common.def.in
@@ -156,6 +156,14 @@ tzname DATA == _tzname
 ADD_UNDERSCORE(vsnprintf_s)
 #endif
 
+; This is list of various symbol aliases which are needed for compatibility
+; Some symbols in some version of CRT library were added and some other symbols were removed or renamed
+; This list provides some level of backward and forward compatibility
+
+#ifndef NO_STRCMPI_ALIAS
+_strcmpi == _stricmp
+#endif
+
 ; This is list of printf/scanf symbol aliases with __ms_ prefix
 #ifndef UCRTBASE
 __ms_fprintf == fprintf
