--- a/mingw-w64-crt/lib32/msvcr71.def.in
+++ b/mingw-w64-crt/lib32/msvcr71.def.in
@@ -7,6 +7,7 @@ LIBRARY "MSVCR71.dll"
 EXPORTS
 
 #define PRE_C95_SWPRINTF
+#define NO_STRCMPI_ALIAS
 #include "msvcrt-common.def.in"
 
 ; public: __thiscall __non_rtti_object::__non_rtti_object(class __non_rtti_object const &)
