crt: Move _atoi64 and _atoi64_l aliases to def-include/msvcrt-common.def.in
Define _atoi64 and _atoi64_l aliases based on a new WITH_ATOLL_ALIAS and
WITH_ATOLL_L_ALIAS macros.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/def-include/msvcrt-common.def.in
+++ b/mingw-w64-crt/def-include/msvcrt-common.def.in
@@ -164,6 +164,14 @@ ADD_UNDERSCORE(vsnprintf_s)
 _strcmpi == _stricmp
 #endif
 
+#ifdef WITH_ATOLL_ALIAS
+atoll == _atoi64
+#endif
+
+#ifdef WITH_ATOLL_L_ALIAS
+_atoll_l == _atoi64_l
+#endif
+
 ; This is list of printf/scanf symbol aliases with __ms_ prefix
 #ifndef UCRTBASE
 __ms_fprintf == fprintf
