--- a/mingw-w64-crt/lib64/msvcr80.def.in
+++ b/mingw-w64-crt/lib64/msvcr80.def.in
@@ -1,6 +1,8 @@
 LIBRARY "MSVCR80.dll"
 EXPORTS
 
+#define WITH_ATOLL_ALIAS
+#define WITH_ATOLL_L_ALIAS
 #include "msvcrt-common.def.in"
 
 ; C++ mangled symbols
@@ -309,7 +311,6 @@ _atof_l
 _atoflt
 _atoflt_l
 _atoi64
-atoll == _atoi64
 _atoi64_l
 _atoi_l
 _atol_l
