--- a/mingw-w64-crt/lib64/msvcr90d.def.in
+++ b/mingw-w64-crt/lib64/msvcr90d.def.in
@@ -6,6 +6,8 @@
 LIBRARY "MSVCR90D.dll"
 EXPORTS
 
+#define WITH_ATOLL_ALIAS
+#define WITH_ATOLL_L_ALIAS
 #include "msvcrt-common.def.in"
 
 $I10_OUTPUT
@@ -358,9 +360,7 @@ _atof_l
 _atoflt
 _atoflt_l
 _atoi64
-atoll == _atoi64
 _atoi64_l
-_atoll_l == _atoi64_l
 _atoi_l
 _atol_l
 _atoldbl
