--- a/mingw-w64-crt/lib64/msvcr80.def.in
+++ b/mingw-w64-crt/lib64/msvcr80.def.in
@@ -3,6 +3,7 @@ EXPORTS
 
 #define WITH_ATOLL_ALIAS
 #define WITH_ATOLL_L_ALIAS
+#define WITH_LLABS_ALIAS
 #include "msvcrt-common.def.in"
 
 ; C++ mangled symbols
@@ -292,8 +293,6 @@ __wcsncnt
 __wgetmainargs
 __winitenv DATA
 _abs64
-llabs == _abs64
-imaxabs == _abs64
 _access
 _access_s
 _acmdln DATA
