--- a/mingw-w64-crt/lib64/msvcr90d.def.in
+++ b/mingw-w64-crt/lib64/msvcr90d.def.in
@@ -8,6 +8,7 @@ EXPORTS
 
 #define WITH_ATOLL_ALIAS
 #define WITH_ATOLL_L_ALIAS
+#define WITH_LLABS_ALIAS
 #include "msvcrt-common.def.in"
 
 $I10_OUTPUT
@@ -330,8 +331,6 @@ __wcsncnt
 __wgetmainargs
 __winitenv DATA
 _abs64
-llabs == _abs64
-imaxabs == _abs64
 _access
 _access_s
 _acmdln DATA
