crt: Move imaxdiv alias to def-include/msvcrt-common.def.in
Define imaxdiv alias based on a new WITH_IMAXDIV_ALIAS macro.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/def-include/msvcrt-common.def.in
+++ b/mingw-w64-crt/def-include/msvcrt-common.def.in
@@ -179,6 +179,10 @@ imaxabs == _abs64
 imaxabs == llabs
 #endif
 
+#ifdef WITH_IMAXDIV_ALIAS
+imaxdiv == lldiv
+#endif
+
 ; This is list of printf/scanf symbol aliases with __ms_ prefix
 #ifndef UCRTBASE
 __ms_fprintf == fprintf
