--- a/mingw-w64-crt/lib64/msvcr100.def.in
+++ b/mingw-w64-crt/lib64/msvcr100.def.in
@@ -9,6 +9,7 @@ EXPORTS
 #define WITH_ATOLL_ALIAS
 #define WITH_ATOLL_L_ALIAS
 #define WITH_IMAXABS_ALIAS
+#define WITH_IMAXDIV_ALIAS
 #include "msvcrt-common.def.in"
 
 $I10_OUTPUT
@@ -1735,7 +1736,6 @@ ldexp DATA
 ldiv
 llabs
 lldiv
-imaxdiv == lldiv
 localeconv
 log DATA
 log10
