--- a/mingw-w64-crt/lib64/msvcr110.def.in
+++ b/mingw-w64-crt/lib64/msvcr110.def.in
@@ -9,6 +9,7 @@ EXPORTS
 #define WITH_ATOLL_ALIAS
 #define WITH_ATOLL_L_ALIAS
 #define WITH_IMAXABS_ALIAS
+#define WITH_IMAXDIV_ALIAS
 #include "msvcrt-common.def.in"
 
 $I10_OUTPUT
@@ -1859,7 +1860,6 @@ ldexp
 ldiv
 llabs
 lldiv
-imaxdiv == lldiv
 localeconv
 log
 log10
