--- a/mingw-w64-crt/lib32/msvcr80.def.in
+++ b/mingw-w64-crt/lib32/msvcr80.def.in
@@ -4,6 +4,8 @@ EXPORTS
 #define WITH_ATOLL_ALIAS
 #define WITH_ATOLL_L_ALIAS
 #define WITH_LLABS_ALIAS
+#define WITH_STRTO64_ALIAS
+#define WITH_STRTO64_L_ALIAS
 #include "msvcrt-common.def.in"
 
 ; C++ mangled symbols
@@ -1044,13 +1046,9 @@ _strtime
 _strtime_s
 _strtod_l
 _strtoi64
-strtoll == _strtoi64
-strtoimax == _strtoi64
 _strtoi64_l
 _strtol_l
 _strtoui64
-strtoull == _strtoui64
-strtoumax == _strtoui64
 _strtoui64_l
 _strtoul_l
 _strupr
