--- a/mingw-w64-crt/lib-common/msvcrt.def.in
+++ b/mingw-w64-crt/lib-common/msvcrt.def.in
@@ -5,9 +5,12 @@ EXPORTS
 #define NO_STRCMPI_ALIAS
 #define WITH_ATOLL_ALIAS
 #define WITH_ATOLL_L_ALIAS
+#define WITH_STRTO64_L_ALIAS
 #ifndef DEF_I386
 ; i386 llabs and imaxabs alias provided by emu
 #define WITH_LLABS_ALIAS
+; i386 strtoll, strtoull, strtoimax and strtoumax alias provided by emu
+#define WITH_STRTO64_ALIAS
 #endif
 #include "func.def.in"
 #include "msvcrt-common.def.in"
@@ -1848,16 +1851,6 @@ F32(_wfindnext32i64 == _wfindnexti64)
 F64(_wfindnext64i32 == _wfindnext)
 F32(_wstat32 == _wstat)
 F64(_wstat64i32 == _wstat)
-
-; This is list of some symbols added in msvcr120.dll which can be defined as aliases to some msvcrt.dll symbols
-_strtoimax_l == _strtoi64_l
-_strtoll_l == _strtoi64_l
-_strtoull_l == _strtoui64_l
-_strtoumax_l == _strtoui64_l
-F_NON_I386(strtoimax == _strtoi64) ; i386 strtoimax alias provided by emu
-F_NON_I386(strtoll == _strtoi64) ; i386 strtoll alias provided by emu
-F_NON_I386(strtoull == _strtoui64) ; i386 strtoull alias provided by emu
-F_NON_I386(strtoumax == _strtoui64) ; i386 strtoumax alias provided by emu
 
 ; This is list of additional symbol aliases not available in any CRT library
 ; FIXME: check if these really are needed
