--- a/mingw-w64-crt/lib32/msvcr90d.def.in
+++ b/mingw-w64-crt/lib32/msvcr90d.def.in
@@ -9,6 +9,8 @@ EXPORTS
 #define WITH_ATOLL_ALIAS
 #define WITH_ATOLL_L_ALIAS
 #define WITH_LLABS_ALIAS
+#define WITH_STRTO64_ALIAS
+#define WITH_STRTO64_L_ALIAS
 #include "msvcrt-common.def.in"
 
 ; public: __thiscall std::__non_rtti_object::__non_rtti_object(class std::__non_rtti_object const &)
@@ -1103,18 +1105,10 @@ _strtime
 _strtime_s
 _strtod_l
 _strtoi64
-strtoll == _strtoi64
-strtoimax == _strtoi64
 _strtoi64_l
-_strtoll_l == _strtoi64_l
-_strtoimax_l == _strtoi64_l
 _strtol_l
 _strtoui64
-strtoull == _strtoui64
-strtoumax == _strtoui64
 _strtoui64_l
-_strtoull_l == _strtoui64_l
-_strtoumax_l == _strtoui64_l
 _strtoul_l
 _strupr
 _strupr_l
