crt: msvcr120_app.def.in: Fix X64 symbol aliases _stat and _stati64
Symbol alias is defined by "==".

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib-common/msvcr120_app.def.in
+++ b/mingw-w64-crt/lib-common/msvcr120_app.def.in
@@ -1669,8 +1669,8 @@ _stat64
 F_X86_ANY(_stat64i32)
 F_I386(_stat == _stat32)
 F_I386(_stati64 == _stat32i64)
-F_X64(_stat = _stat64i32)
-F_X64(_stati64 = _stat64)
+F_X64(_stat == _stat64i32)
+F_X64(_stati64 == _stat64)
 F_ARM32(_stati64)
 _statusfp
 F_I386(_statusfp2)
